fix: `d:` file selection in interactive mode
